<resources>
    <string name="app_name">My Baby</string>
    <string name="phone_hint">+996 (000) 000000</string>
    <string name="authorization">Авторизация</string>
    <string name="type_number">Введите номер телефона:</string>
    <string name="get_code">Получить код</string>
    <string name="login">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная</string>
    <string name="schedule">Расписание</string>
    <string name="checklist">Чеклист</string>
    <string name="profile">Профиль</string>
    <string name="food">Питание</string>
    <string name="weight">Вес</string>
    <string name="clothes">Вещи для малыша</string>
    <string name="bag">Сумка в роддом</string>
    <string name="articles">Полезные статьи</string>
    <string name="faq">Часто задаваемые вопросы</string>
    <string name="useful">Полезное</string>
    <string name="enroll">Записаться</string>
    <string name="personal_items">Для госпитализации в отделение патологии беременных или на роды</string>
    <string name="education">1987 г. - Свердловский государственный медицинский институт (СГМИ) по специальности «Лечебное дело».\n \n1987-1988 гг. - Клиническая интернатура на кафедре СГМИ при ГБ №20 по специальности «Акушерство и гинекология». \n\n1992-1994 гг. - Клиническая ординатура на кафедре акушерства и гинекологии при УГМА.\n\n 1993 г. - повышение квалификации при УГМИ по циклу «Гинекологическая эндокринология».\n\n 2015 г. - присвоена высшая квалификационная категория по акушерству и гинекологии. \n\n2018 г. - профессиональная переподготовка «Ультразвуковая диагностика».</string>
    <string name="diplom"> Высшая категория по акушерству и гинекологии. \n- Действующий сертификат по акушерству и гинекологии, ультразвуковой диагностике.</string>
    <string name="hh">𐤟 Паспорт и его ксерокопия\n𐤟 Свидетельство о браке для получения свидетельства о рождении в роддоме\n𐤟 Полис ОМС и его ксерокопия\n𐤟 Обменная карта\n𐤟 Страховое свидетельство обязательного пенсионного страхования и его ксерокопия\n𐤟 Родовой сертификат, при наличии\n𐤟 Контракт на роды, при наличии</string>
    <string name="personal_list">𐤟 Телефон и зарядное устройство\n𐤟 Вода (0,5 л.)\n𐤟 Чулки компрессионные\n𐤟 Тапочки резиновые\n𐤟 Средства личной гигиены: мыло, зубная щетка, расческа, шампунь и прочее\n𐤟 Хлопчатобумажные носки\n𐤟 Халат</string>
    <string name="after_clothes">𐤟 Одноразовое белье (10 шт.)\n𐤟 Послеродовой бандаж\n𐤟 Специальный бюстгальтер для кормящих\n𐤟 Гигиенические прокладки</string>
    <string name="importanceToVisitDoctors">Важно своевременно посещать доктора!\nОт этого зависит Ваше здоровье и здоровье Вашего ребенка. При визитах к врачу, можно обнаружить и предотвратить нежелательные осложнения. \nДоктора ответят на все интересующие Вас вопросы и помогут улучшить Ваше самочувствие. \nДля правильного формирования плода, необходимо проверяться у врачей каждый месяц.</string>
</resources>