<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/main"
            android:checked="true" />
        <item
            android:id="@+id/scheduleFragment"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/checklistFragment"
            android:icon="@drawable/ic_check"
            android:title="@string/checklist" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>
</menu>